# LLMtext

./: .gitignore  README.md  main.py  requirements.txt
docs/: TOKENIZER_RUST.md
script/: prepare_dataset.py
src/: charDataset.py  config.py  prepare_dataset.py  subwordTokenizer.py  train_tokenizer.py
src/data/: dataset.py
src/tokens/: subwordTokenizer.py  subwordTokenizerOpt.py  subword_tokenizer_rust.py
src/tokens/subtk/: Cargo.toml  pyproject.toml
src/tokens/subtk/src/: lib.rs
test/: test_shakespear.py  verify_dataset.py
