[package]
name = "subtk"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
fxhash = "0.2.1"
pyo3 = { version = "0.18.3", features = ["extension-module"] }
rayon = "1.11.0"
rustc-hash = "2.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallvec = "1.15.1"
